<resources>
    <string name="app_name">Awlem</string>
    <string name="app_db">olem_db</string>

    <string name="select_image">أختار صـورة</string>
    <string name="gallery">معرض الصور</string>
    <string name="camera">الكاميرا</string>
    <string name="login">تسجيل الدخول</string>
    <string name="register">انشاء حساب</string>
    <string name="confirm">تأكيد</string>
    <string name="guestLogin">يرجي تسجيل الدخول للاستمرار ..</string>
    <string name="do_you_want_logout">هل تريد تسجيل الخروج ؟</string>
    <string name="menu_logout">تسجيل خروج</string>
    <string name="phone">رقم الهاتف</string>
    <string name="password">كلمة المرور</string>
    <string name="confirm_password">تـأكيد كلمة المرور</string>
    <string name="forgetPassword">نسيت كلمة المرور ؟</string>
    <string name="welcome_in">مرحبا بكم في تطبيق أولم</string>
    <string name="phoneReq">يرجي أدخال رقم الهاتف</string>
    <string name="resend">إعادة ارسال</string>
    <string name="PasswordReq">"يرجي أدخال كلمة المرور "</string>
    <string name="confirmPasswordReq">"يرجي أدخال تأكيد المرور "</string>
    <string name="misMatchPassword">كلمة المرور غير مطابقة تأكيد كلمة المرور</string>

    <string name="restaurant_login">
<font fgcolor="#4a4a48">هل انت مطعم / مقهي ؟ </font>
<font fgcolor="#f05f40"> سجل دخول</font>
</string>

    <string name="create_account">
<font fgcolor="#4a4a48">ليس لديك حساب ؟ </font>
<font fgcolor="#f05f40"> قم بإنشاء حساب</font>
</string>
    <string name="have_account">
<font fgcolor="#4a4a48"> لديك حساب ؟ </font>
<font fgcolor="#f05f40"> تسجيل الدخول</font>
</string>
    <string name="fullName">الاسم بالكامل</string>
    <string name="email">البريد الالكتروني</string>
    <string name="activate">تفعيل الحساب </string>
    <string name="please_activate">برجاء ادخال كود التفعيل</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">الرئيسية</string>
    <string name="title_order">اطلب</string>
    <string name="title_offers">العروض</string>
    <string name="title_more">القائمة</string>

    <string name="turn_on_location">تشغيل الموقع</string>
    <string name="please_turn_on_location">يرجى تشغيل الموقع ..</string>
    <string name="order_now">اطلب الان</string>
    <string name="suggest_restaurant">مطاعم مقترحة</string>
    <string name="categories">الاقسام</string>
    <string name="search_restaurant">ابحث عن مطعم او مقهي</string>
    <string name="continue_">متابعة</string>

    <string name="reload">يرجي أعاده التحميل</string>
    <string name="relog">يرجي أعاده تسجيل الدخول</string>
    <string name="re_regiter">يرجي أعاده أنشاء الحساب</string>
    <string name="re_activate">يرجي أعاده تفعيل الحساب</string>
    <string name="internetError">لا يوجد اتصال إنترنت ..</string>
    <string name="badInternet">اتصال انترنت سيئ ..</string>
    <string name="invalidToken">أنتهت جلستك , يرجي أعادة تسجيل الدخول ..</string>
    <string name="server_error">خطأ في الخادم 500</string>
    <string name="addToCart">اضف للسلة</string>
    <string name="profile">حسابي</string>
    <string name="orders">الطلبات</string>
    <string name="help">المساعدة</string>
    <string name="privacy">سياسة الخصوصية</string>
    <string name="terms">الشروط والاحكام</string>
    <string name="about">عن التطبيق</string>
    <string name="rate">قيم التطبيق</string>
    <string name="skip">تخطي</string>
    <string name="thanks">شكرا لاستخدام تطبيق أوليم</string>
    <string name="rate_done">تم تقييم السؤال بنجاح </string>
    <string name="common">الأسئلة الشائعة</string>
    <string name="add_one_faq">اذا لم تجد ما تبحث عنه ارسل لنا استفسارك</string>
    <string name="message_address">عنوان الرسالة</string>
    <string name="message_content">رسالتك</string>
    <string name="send">ارسال</string>
    <string name="message_address_req">يرجي أدخال عنوان الرسالة</string>
    <string name="message_content_req">يرجي محتوي الرسالة</string>
    <string name="comment">اكتب تعليقك</string>
    <string name="fullNameReq">يرجي أدخال الأسم بالكامل</string>
    <string name="emailReq">يرجي أدخال البريد الألكتروني</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">البحث</string>
</resources>