<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.semi.awlem.ui.splash.login.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.splash.login.LoginFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/key_lines">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_padding"
                android:drawablePadding="@dimen/key_lines"
                android:gravity="center"
                android:padding="@dimen/key_lines"
                android:text="@string/welcome_in"
                android:textColor="@color/primary"
                android:textSize="@dimen/HeaderFont"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_awlem_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/key_linesV"
                android:text="@string/login"
                android:textColor="@color/secondary"
                android:textSize="@dimen/HeaderFont"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoTv" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneTextInput"
                style="@style/MyEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/key_lines"
                android:enabled="@{!viewModel.isLoading()}"
                android:hint="@string/phone"
                android:inputType="phone"
                android:singleLine="true"
                android:text="@={viewModel.phone}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextInput"
                style="@style/MyEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="@{!viewModel.isLoading()}"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="@={viewModel.password}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneTextInput" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/key_lines"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/key_linesV"
                android:text="@string/forgetPassword"
                android:textColor="@color/secondary"
                android:onClick="@{viewModel::forgetClick}"
                android:textSize="@dimen/mainFont"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextInput" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_bt"
                style="@style/MyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_padding"
                android:enabled="@{!viewModel.isLoading()}"
                android:onClick="@{(v)->viewModel.loginClick(v,phoneTextInput,passwordTextInput)}"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forget" />


            <androidx.core.widget.ContentLoadingProgressBar
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:theme="@style/CircularProgress"
                android:visibility="@{viewModel.isLoading() ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="@+id/save_bt"
                app:layout_constraintEnd_toEndOf="@+id/save_bt"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/save_bt"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/restaurant_Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/key_lines"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/key_linesV"
                android:text="@string/restaurant_login"
                android:textSize="@dimen/mainFont"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save_bt" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{viewModel::registerClick}"
                android:padding="@dimen/key_linesV"
                android:text="@string/create_account"
                android:textSize="@dimen/mainFont"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
