<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        style="@style/card_view_padding_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/key_lines">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/key_linesV"
                android:text="@string/select_image"
                android:textColor="@color/black"
                android:textSize="@dimen/HeaderFont"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/galleryIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/key_lines"
                android:layout_marginEnd="@dimen/key_lines"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/key_linesV"
                android:gravity="start"
                android:padding="@dimen/key_lines"
                android:text="@string/gallery"
                android:textColor="@color/primary"
                android:textSize="@dimen/mainFont"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_gallery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cameraIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/key_lines"
                android:layout_marginEnd="@dimen/key_lines"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/key_linesV"
                android:gravity="start"
                android:padding="@dimen/key_lines"
                android:text="@string/camera"
                android:textColor="@color/primary"
                android:textSize="@dimen/mainFont"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/galleryIcon" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>

